[gd_scene load_steps=10 format=2]

[ext_resource path="res://map_objects/InteractionBubble.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/characters/player.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 4 )

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Interact"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 4, 14, 4 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Walking"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 6, 7, 8, 9, 10 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 23.0217

[node name="Player" type="KinematicBody2D"]
position = Vector2( 166, 92 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
hframes = 6
vframes = 5
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 8 )
anims/Interact = SubResource( 11 )
anims/RESET = SubResource( 9 )
anims/Walking = SubResource( 10 )

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( 1, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractionArea" type="Area2D" parent="Position2D" groups=["Player"]]

[node name="Shape" type="CollisionShape2D" parent="Position2D/InteractionArea"]
shape = SubResource( 6 )

[node name="SpeechBubble" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 12.5, -21.5 )
scale = Vector2( 0.188889, 0.188889 )
animation = "coal"

[connection signal="area_entered" from="Position2D/InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="Position2D/InteractionArea" to="." method="_on_InteractionArea_area_exited"]
